Using set_data.js to load data

--- a/test_data.html
+++ b/test_data.html
@@ -3,7 +3,7 @@
 		<title> Test Data </title>
 		<script src = "set_data.js"> </script>
 	</head>
-	<body onload = "set_data([['20140101',100000,'d'],['20140102',200000,'d'],['20140103',300000,'w']])">
-		<h1> Testing Data </h1>
+	<body onload = "set_transactions([['20140101',100000,'d'],['20140102',200000,'d'],['20140103',300000,'w']]);set_data([['20140101','100000'],['20140102',200000],['20140103',400000]]);">
+		<a href="chart.html"> View Chart </a>
 	</body>
 </html>
